Bug 327281 - when output is suspended I can not see topmost line
Summary: when output is suspended I can not see topmost line
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: history (other bugs)
Version First Reported In: 2.11.3
Platform: openSUSE Linux
: LO minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-07 15:17 UTC by Martin Koller
Modified: 2014-02-10 14:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2013-11-07 15:17:27 UTC
When I suspend the output with CTRL+S konsole shows an information message covering the top-most area of the scrollview. Although this is nice, I can not see the top-most output line.

A solution could be: the informational widget shall be placed between the menu bar and the scrollview.

Reproducible: Always
Comment 1 Kurt Hindenburg 2013-11-16 14:49:58 UTC
Yes it does make the top line hidden - however if a widget is added it will change the size of the windows/terminal which we don't want.

I'm open to suggestions + code
Comment 2 Kurt Hindenburg 2014-02-09 16:43:07 UTC
The best I could see is having another option to not display the warning messsage.
Comment 3 Martin Koller 2014-02-09 18:07:10 UTC
What about
- show the information just for a few seconds (just enough time to read it) then hide it
or
- include a "close" button in the information line to hide it

BTW: The link to the wikipedia page should be .../Flow_control_(data)
else you get the disambiguation page
Comment 4 Kurt Hindenburg 2014-02-09 18:59:41 UTC
I'll look at these futher  - the link was changed a while ago to http://en.wikipedia.org/wiki/Software_flow_control
Comment 5 Kurt Hindenburg 2014-02-09 20:03:01 UTC
https://git.reviewboard.kde.org/r/115607/

hides the warning after 10 seconds
Comment 6 Kurt Hindenburg 2014-02-09 21:58:35 UTC
Git commit db8877db55a40e73883fd0a544443ca19162730d by Kurt Hindenburg.
Committed on 09/02/2014 at 21:56.
Pushed by hindenburg into branch 'master'.

Dismiss flow control message after a few seconds

With flow control enabled, the first line of terminal is hidden with
the message about flow control.  This messsage will be dismissed after
10 seconds.

FIXED-IN: 2.13
REVIEW: 115607

M  +13   -2    src/TerminalDisplay.cpp
M  +2    -0    src/TerminalDisplay.h

http://commits.kde.org/konsole/db8877db55a40e73883fd0a544443ca19162730d
Comment 7 Kurt Hindenburg 2014-02-10 14:29:39 UTC
Git commit 74ee063ea8273cc4dd660a6af420e354679603bb by Kurt Hindenburg.
Committed on 09/02/2014 at 21:56.
Pushed by hindenburg into branch 'frameworks'.

Dismiss flow control message after a few seconds

With flow control enabled, the first line of terminal is hidden with
the message about flow control.  This messsage will be dismissed after
10 seconds.

FIXED-IN: 2.13
REVIEW: 115607
(cherry picked from commit db8877db55a40e73883fd0a544443ca19162730d)

M  +13   -2    src/TerminalDisplay.cpp
M  +2    -0    src/TerminalDisplay.h

http://commits.kde.org/konsole/74ee063ea8273cc4dd660a6af420e354679603bb