Dismiss flow control message after a few seconds

With flow control enabled, the first line of terminal is hidden with
the message about flow control.  This messsage will be dismissed after
10 seconds.

FIXED-IN: 2.13
BUG: 327281
REVIEW: 115607